# FableStar_Claude_RP

./: .gitignore  LICENSE  README.md
worldweaver/: .gitignore  ARCHITECTURE_ALIGNMENT_COMPLETE.md  GM_DASHBOARD_COMPLETE.md  GM_DASHBOARD_GUIDE.md  GM_STYLING_UPDATE.md  HARDWARE_MONITOR_STYLE.md  IMPLEMENTATION_STATUS.md  PHASE2_COMPLETE.md  PHASE2_TESTING.md  PLAN_COMPLETION_REPORT.md  QUICKSTART.md  QUICK_START_GM.md  README.md  README_PHASE2.md  TECHNICAL_REFERENCE.md  TERRAIN_AUDIT_2026.md  UNIFIED_STYLING_COMPLETE.md  WORLD_MAP.md  launch-dev.bat  package-lock.json  package.json  svelte.config.js
worldweaver/src/: app.css
worldweaver/src-tauri/: Cargo.toml  tauri.conf.json
worldweaver/src-tauri/capabilities/: default.json
worldweaver/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
worldweaver/src-tauri/src/database/: mod.rs  persistence.rs  queries.rs  schema.rs
worldweaver/src-tauri/src/mcp_server/: context.rs  mod.rs  server.rs  tools.rs
worldweaver/src-tauri/src/simulation/: components.rs  events.rs  lod.rs  mod.rs  storylets.rs  systems.rs  tick.rs  world.rs
worldweaver/src-tauri/src/terrain/: biomes.rs  brush.rs  commands.rs  config.rs  erosion.rs  heightmap.rs  hydrology.rs  mod.rs  noise_gen.rs  persistence.rs  rivers.rs  roads.rs
worldweaver/src/lib/components/gm/: EventLogViewer.svelte  NpcManager.svelte  (+3 more)
worldweaver/src/lib/stores/: worldState.ts
worldweaver/src/lib/styles/: gm-theme.css
worldweaver/src/lib/utils/: tauri.ts
worldweaver/src/routes/: +layout.svelte  +page.svelte
worldweaver/src/routes/gm/: +page.svelte
(+7 files in other folders)
