[package]
name = "worldweaver"
version = "0.1.0"
description = "A persistent world RPG platform"
authors = ["WorldWeaver Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bevy_ecs = "0.15"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
rmcp = "0.15"
rand = "0.9"
pathfinding = "4.8"
bincode = "1.3"
noise = "0.9"
simdnoise = "3.1"
zstd = "0.13"
contour = "0.13"
rayon = "1.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
